CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

11 June 2008
+ Updated jquery to 1.2.6
+ Added jcarousel lite from filecabinet
+ Added Ganeshji Marwaha to CREDITS file for above plugin
+ Updated: javascript/jquery/jcarousellite.js

Version 1.8.2
----------------------------------------------------------------------
6 June 2008
+ Added clock mode to js_calendar
+ Updated js_calendar to most recent version.
+ Removed isIIS.

5 June 2008
+ Added isIIS function to Core to detect IIS web server installation
+ Fixing local directory function in setup as recommended by
  byerkes. Should prevent IIS errors.

4 June 2008
+ Added column existence check to Database's dropTableColumn
+ unsigned removed from import now, not worked around
+ Key's ceiling was changed to 2137400000 to conform with int limits

3 June 2008
+ Removed warning from Database.php begin function.
+ Added check for unsigned in the Database::homogenize function.

30 May 2008
+ created default htaccess file in core/inc/. Access and Branch module
  updated to accommodate change.

29 May 2008
+ added a force_name parameter to useEditor. Allows the dev to specify
  which tool to use.
+ Added comment about the use_filter parameter in parseOutput.
+ TinyMCE - added limited interface for bbcode. Used in comments.
+ TinyMCE - pulled configuration into included files to help with
            limited settings
+ TinyMCE - Fixed error message with GoogleSpell.
+ TinyMCE - Added emotions plugin
+ Added font color ability to bbcode filter
+ Banana added to smilies FINALLY
+ Updated: javascript/editors/tinymce/default.php,
           javascript/editors/tinymce/head.js,
           javascript/editors/tinymce/limited.js,
           javascript/editors/tinymce/custom.js,
           javascript/editors/tinymce/default.php,
           img/smilies/banana.gif
           conf/smiles.pak

27 May 2008
+ DBPager : joined columns can now be header sorted.