@@ -423,6 +423,34 @@ implementation, you MUST create a variable for your object. In this
 case I would need $object->category_title to exist.
 
 
+Saving the last view
+-------------------------------------------------------------------
+If the user or the module deviates from the pager, the variables in
+the url will be lost. This will cause the last sort or view to be
+reset. To prevent this, use cacheQueries:
+
+$pager->cacheQueries();
+
+The default parameter is true. This will take a snapshot of the
+current order, limit, and search. When the user returns, the snapshot
+will be loaded.
+
+Grabbing the url
+-------------------------------------------------------------------
+If you want to store the url from pager use saveLastView:
+
+$pager->saveLastView();
+
+This will copy the current url keyed to the table.
+
+To get the url back call
+
+$url = DBPager::getLastView($table_name);
+
+You could then apply that url to a link or header location to return
+the user to the pager.
+
+
 Conclusion
 --------------------------------------------------------------------
 I hope you find the DB Pager class useful. If you have questions,
